Feat: delete all button

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -62,7 +62,7 @@
             </div>
           </div>
       </div>
-
+      <button (click)="deleteAll()">Delete it all!</button>
         <!-- modal below -->
 
 
